[package]
name = "core"
version = "0.1.0"
authors = ["Maf <wmafire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.2.1"

serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"

log = "0.4.14"

regex = "1.3.1"

chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde","v4"] }

handlebars = "3.5.3"

pulldown-cmark = "0.8.0"
itertools = "0.8"
roman = "0.1.6"
rhai = { git = "https://github.com/rhaiscript/rhai", features = ["serde"] }
[dev-dependencies]
filesystem = "0.4.4"
lazy_static = "1.4.0"